--- a/SSH Simulation/SSH_simulation.ipynb
+++ b/SSH Simulation/SSH_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -67,26 +67,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Resonance frequency (w,f) is:  (69794.05957555035, 438529.0096535146)\n"
+      "The Resonance frequency (f,w) is:  (69794.05957555035, 438529.0096535146)\n"
      ]
     }
    ],
    "source": [
     "# Resonance frequency of the SSH circuit \n",
     "W = SSH.resonance(0.22*10**(-6),0.3*10**(-6),10**(-5))\n",
-    "print(\"The Resonance frequency (w,f) is: \", W)"
+    "print(\"The Resonance frequency (f,w) is: \", W)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -134,26 +134,24 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "(88970.31792714713, 559016.9943749474)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The resonance freqency is : 88970.31792714713\n"
+     ]
     }
    ],
    "source": [
     "# Plot the Impedance vs frequency graph of SSH circuit    \n",
     "SSH.plott(0.1, 0.22, 0, 1,20)\n",
-    "SSH.resonance(0.22*10**(-6),0.1*10**(-6),10**(-5))\n",
+    "w = SSH.resonance(0.22*10**(-6),0.1*10**(-6),10**(-5))[0]\n",
+    "print(\"The resonance freqency is :\", w)\n",
     "## Topological case, peak at resonance frequency"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -169,19 +167,17 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "(100658.42420897407, 632455.5320336758)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The resonance freqency is : 100658.42420897407\n"
+     ]
     }
    ],
    "source": [
     "SSH.plott(0.15, 0.1, 0, 1,20)\n",
-    "SSH.resonance(0.15*10**(-6),0.1*10**(-6),10**(-5))\n",
+    "k = SSH.resonance(0.15*10**(-6),0.1*10**(-6),10**(-5))[0]\n",
+    "print(\"The resonance freqency is :\", k)\n",
     "## Non-topological case, no peak at resonance frequency"
    ]
   }
