--- a/SVD/DIY.ipynb
+++ b/SVD/DIY.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -368,16 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1fc74752dc0>"
+       "<matplotlib.image.AxesImage at 0x24870d0cc70>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "Text(0.5, 1.0, '5 singular values')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "Text(0.5, 1.0, ' 25 singular values')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "Text(0.5, 1.0, ' 45 singular values')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "Text(0.5, 1.0, ' 155 singular values')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "Text(0.5, 1.0, ' 230 singular values')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -656,10 +656,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1fc74a81fa0>"
+       "<matplotlib.image.AxesImage at 0x248736aac70>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
        "Text(0.5, 1.0, ' 35 singular values')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
        "Text(0.5, 1.0, ' 5 singular values')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
        "Text(0.5, 1.0, ' 25 singular values')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "Text(0.5, 1.0, ' 55 singular values')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
        "Text(0.5, 1.0, ' 85 singular values')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
        "Text(0.5, 1.0, ' 135 singular values')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
